--- a/src/config.json
+++ b/src/config.json
@@ -3,6 +3,16 @@
         "agent":"Ведущий специалист по домашним услугам ПАО МТС Александр",
         "phone":"8 - 917 - 292 - 84 - 45"
     },
-    "action":"Оставь заявку через сайт или телеграм и получи месяц на любой тарифный план в подарок!"
+
+    "stock":"Оставь заявку через сайт или телеграм и получи месяц на любой тарифный план в подарок!",
+
+    "tariffNav":{
+        "active":{
+            "className":"tariff_nav_active"
+        },
+        "inactive":{
+            "className":"tariff_nav_inactive"
+        }
+    }
     
 }
