--- a/src/config.json
+++ b/src/config.json
@@ -13,6 +13,153 @@
         "inactive":{
             "className":"tariff_nav_inactive"
         }
+    },
+
+    "tariffConfig":{
+        "wifi":[
+            {
+                "type":"Интернет",
+                "name":"Интернет 100",
+                "services":[
+                    {
+                        "name":"Интернет",
+                        "value":"100 Мбит/сек.",
+                        "icon":"wifi_red.png"
+                    }
+                ],
+                "extra":[
+                    {
+                        "value":"Аренда роутера – 99 руб./месяц"
+                    }
+                ],
+                "price": 350
+            },
+            {
+                "type":"Интернет",
+                "name":"Интернет 500",
+                "services":[
+                    {
+                        "name":"Интернет",
+                        "value":"500 Мбит/сек.",
+                        "icon":"wifi_red.png"
+                    }
+                ],
+                "extra":[
+                    {
+                        "value":"Аренда роутера – 20 руб./месяц"
+                    }
+                ],
+                "price": 500
+            }
+        ],
+        "wifi_tv":[
+            {
+                "type":"Интернет+ТВ",
+                "name":"Интернет 100 + ТВ",
+                "services":[
+                    {
+                        "name":"Интернет",
+                        "value":"100 Мбит/сек.",
+                        "icon":"wifi_red.png"
+                    },
+                    {
+                        "name":"Телевидение",
+                        "value":"222 канала",
+                        "icon":"tv_red.png"
+                    }
+                ],
+                "extra":[
+                    {
+                        "value":"Аренда роутера – 99 руб./месяц"
+                    }
+                ],
+                "price": 560
+            },
+            {
+                "type":"Интернет+ТВ",
+                "name":"Интернет 500 + ТВ",
+                "services":[
+                    {
+                        "name":"Интернет",
+                        "value":"500 Мбит/сек.",
+                        "icon":"wifi_red.png"
+                    },
+                    {
+                        "name":"Телевидение",
+                        "value":"222 канала",
+                        "icon":"tv_red.png"
+                    }
+                ],
+                "extra":[
+                    {
+                        "value":"Аренда роутера – 20 руб./месяц"
+                    }
+                ],
+                "price": 710
+            }
+        ],
+        "wifi_tv_ph":[
+            {
+                "type":"Интернет+ТВ+Мобайл",
+                "name":"Весь МТС супер",
+                "services":[
+                    {
+                        "name":"Интернет",
+                        "value":"100 Мбит/сек.",
+                        "icon":"wifi_red.png"
+                    },
+                    {
+                        "name":"Телевидение",
+                        "value":"222 канала",
+                        "icon":"tv_red.png"
+                    },
+                    {
+                        "name":"Мобильный",
+                        "value":"30Гб, 1100 минут, 100 SMS",
+                        "icon":"phone_red.png"
+                    }
+                ],
+                "extra":[
+                    {
+                        "value":"Аренда роутера – 99 руб./месяц"
+                    },
+                    {
+                        "value":"Онлайн кинотеатр KION"
+                    }
+                ],
+                "price": 650
+            },
+            {
+                "type":"Интернет+ТВ+Мобайл",
+                "name":"Мы МТС",
+                "services":[
+                    {
+                        "name":"Интернет",
+                        "value":"500 Мбит/сек.",
+                        "icon":"wifi_red.png"
+                    },
+                    {
+                        "name":"Телевидение",
+                        "value":"222 канала",
+                        "icon":"tv_red.png"
+                    },
+                    {
+                        "name":"Мобильный",
+                        "value":"50Гб, 2000 минут, 500 SMS",
+                        "icon":"phone_red.png"
+                    }
+                ],
+                "extra":[
+                    {
+                        "value":"Аренда роутера – 20 руб./месяц"
+                    },
+                    {
+                        "value":"Онлайн кинотеатр KION"
+                    }
+                ],
+                "price": 790
+            }
+        ]
     }
     
 }
