--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,6 @@
 {
     "contacts":{
-        "agent":"Ведущий специалист по домашним услугам ПАО МТС Александр",
+        "agent":"Ведущий специалист по домашним услугам ПАО МТС Александр:",
         "phone":"8 - 917 - 292 - 84 - 45"
     },
 
