--- a/src/config.json
+++ b/src/config.json
@@ -160,6 +160,10 @@
                 "price": 790
             }
         ]
+    },
+
+    "maskOptions" : { 
+        "mask": "+{7}(900) 000-00-00"
     }
     
 }
