--- a/src/config.json
+++ b/src/config.json
@@ -115,6 +115,14 @@
                     "icon":"tv_red.png"
                 }
             ],
+            "equip":[
+                {
+                    "value":"Аренда приставки – 99 руб./месяц"
+                },
+                {
+                    "value":"Аренда каммодуля - 99 р./месяц"
+                }
+            ],
             "price":290
         },
         {
@@ -274,6 +282,9 @@
                 },
                 {
                     "value":"Скидка 10% на автоплатёж"
+                },
+                {
+                    "value":"Матч! Премьер"
                 }
             ],
             "price":750
@@ -319,6 +330,9 @@
                 },
                 {
                     "value":"Скидка 10% на автоплатёж"
+                },
+                {
+                    "value":"Матч! Премьер"
                 }
             ],
             "price":750
