--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,11 @@
 {
     "contacts":{
         "agent":"Ведущий специалист по домашним услугам ПАО МТС Александр:",
+        "about":[
+            "Агент группы продаж",
+            "Работаю в компании пятый год",
+            "Суммарно через меня подключилось более 1000 квартир"
+        ],
         "phone":"8 - 917 - 292 - 84 - 45"
     },
 
