--- a/src/config.json
+++ b/src/config.json
@@ -2,9 +2,9 @@
     "contacts":{
         "agent":"Ведущий специалист по домашним услугам ПАО МТС Александр",
         "about":[
-            "Агент группы продаж",
-            "Работаю в компании пятый год",
-            "Суммарно через меня подключилось более 1000 квартир"
+            "Агент группы продаж, работаю в компании пятый год, суммарно через меня подключилось более 1000 квартир",
+            "Веду работу по республике Татарстан",
+            "Личный сайт специалиста, не является собственностью ПАО МТС"
         ],
         "phone":"8 - 917 - 292 - 84 - 45"
     },
