--- a/src/config.json
+++ b/src/config.json
@@ -25,6 +25,7 @@
             "name":"Интернет 100/200",
             "tags":["wifi"],
             "type":"Интернет",
+            "short":"Домашний интернет до 200 Мбит/сек.",
             "services":[
                 {
                     "name":"Интернет",
@@ -43,6 +44,7 @@
             "name":"Интернет 500",
             "tags":["wifi"],
             "type":"Интернет",
+            "short":"Домашний интернет до 500 Мбит/сек.",
             "services":[
                 {
                     "name":"Интернет",
@@ -61,6 +63,7 @@
             "name":"Интернет 100/200 + базовый ЦТВ",
             "tags":["wifi", "tv"],
             "type":"Интернет + ТВ",
+            "short":"Домашний интернет и ТВ",
             "services":[
                 {
                     "name":"Интернет",
@@ -87,6 +90,7 @@
             "name":"Интернет 500 + базовый ЦТВ",
             "tags":["wifi", "tv"],
             "type":"Интернет + ТВ",
+            "short":"Домашний интернет и ТВ",
             "services":[
                 {
                     "name":"Интернет",
@@ -113,6 +117,7 @@
             "name":"Базовый ЦТВ",
             "tags":["tv"],
             "type":"ТВ",
+            "short":"Цифровое телевидение 222 канала",
             "services":[
                 {
                     "name":"Домашнее ЦТВ",
@@ -134,6 +139,7 @@
             "name":"Весь МТС",
             "tags":["wifi", "tv", "mobile"],
             "type":"Интернет + ТВ + Мобайл",
+            "short":"Домашний интернет, ТВ и мобильная связь",
             "services":[
                 {
                     "name":"Интернет",
@@ -179,6 +185,7 @@
             "name":"Весь МТС Интернет",
             "tags":["wifi", "mobile"],
             "type":"Интернет + Мобайл",
+            "short":"Домашний интернет с мобильной связью",
             "services":[
                 {
                     "name":"Интернет",
@@ -213,6 +220,7 @@
             "name":"Весь МТС ТВ",
             "tags":["tv", "mobile"],
             "type":"ТВ + Мобайл",
+            "short":"Домашний интернет с мобильной связью",
             "services":[
                 {
                     "name":"Домашнее ЦТВ",
@@ -250,6 +258,7 @@
             "name":"Мы МТС+ 100",
             "tags":["wifi", "tv", "mobile"],
             "type":"Интернет + ТВ + Мобайл",
+            "short":"Домашний интернет с мобильной связью и ТВ",
             "services":[
                 {
                     "name":"Интернет",
@@ -298,6 +307,7 @@
             "name":"Мы МТС+ 500",
             "tags":["wifi", "tv", "mobile"],
             "type":"Интернет + ТВ + Мобайл",
+            "short":"Домашний интернет с мобильной связью и ТВ",
             "services":[
                 {
                     "name":"Интернет",
