--- a/src/config.json
+++ b/src/config.json
@@ -20,6 +20,8 @@
         }
     },
 
+    "tariffs_url":"192.168.0.103:8080/alltariffs",
+
     "tariffConfig":[
         {
             "name":"Интернет 100/200",
