--- a/src/config.json
+++ b/src/config.json
@@ -22,339 +22,8 @@
 
     "tariffs_url":"http://192.168.0.103:8080/alltariffs",
 
-    "tariffConfig":[
-        {
-            "name":"Интернет 100/200",
-            "tags":["wifi"],
-            "type":"Интернет",
-            "short":"Домашний интернет до 200 Мбит/сек.",
-            "services":[
-                {
-                    "name":"Интернет",
-                    "value":"до 200 Мбит/сек.",
-                    "icon":"wifi_white.png"
-                }
-            ],
-            "equip":[
-                {
-                    "value":"Аренда роутера – 150 руб./месяц"
-                }
-            ],
-            "price":350
-        },
-        {
-            "name":"Интернет 500",
-            "tags":["wifi"],
-            "type":"Интернет",
-            "short":"Домашний интернет до 500 Мбит/сек.",
-            "services":[
-                {
-                    "name":"Интернет",
-                    "value":"500 Мбит/сек.",
-                    "icon":"wifi_white.png"
-                }
-            ],
-            "equip":[
-                {
-                    "value":"Аренда роутера – 150 руб./месяц"
-                }
-            ],
-            "price":500
-        },
-        {
-            "name":"Интернет 100/200 + базовый ЦТВ",
-            "tags":["wifi", "tv"],
-            "type":"Интернет + ТВ",
-            "short":"Домашний интернет и ТВ",
-            "services":[
-                {
-                    "name":"Интернет",
-                    "value":"до 200 Мбит/сек.",
-                    "icon":"wifi_white.png"
-                },
-                {
-                    "name":"Домашнее ЦТВ",
-                    "value":"222 канала",
-                    "icon":"tv_white.png"
-                }
-            ],
-            "equip":[
-                {
-                    "value":"Аренда роутера – 99 руб./месяц"
-                },
-                {
-                    "value":"Аренда приставки – 99 руб./месяц"
-                }
-            ],
-            "price":550
-        },
-        {
-            "name":"Интернет 500 + базовый ЦТВ",
-            "tags":["wifi", "tv"],
-            "type":"Интернет + ТВ",
-            "short":"Домашний интернет и ТВ",
-            "services":[
-                {
-                    "name":"Интернет",
-                    "value":"500 Мбит/сек.",
-                    "icon":"wifi_white.png"
-                },
-                {
-                    "name":"Домашнее ЦТВ",
-                    "value":"222 канала",
-                    "icon":"tv_white.png"
-                }
-            ],
-            "equip":[
-                {
-                    "value":"Аренда роутера – 99 руб./месяц"
-                },
-                {
-                    "value":"Аренда приставки – 99 руб./месяц"
-                }
-            ],
-            "price":700
-        },
-        {
-            "name":"Базовый ЦТВ",
-            "tags":["tv"],
-            "type":"ТВ",
-            "short":"Цифровое телевидение 222 канала",
-            "services":[
-                {
-                    "name":"Домашнее ЦТВ",
-                    "value":"222 канала",
-                    "icon":"tv_white.png"
-                }
-            ],
-            "equip":[
-                {
-                    "value":"Аренда приставки – 99 руб./месяц"
-                },
-                {
-                    "value":"Аренда каммодуля - 99 р./месяц"
-                }
-            ],
-            "price":290
-        },
-        {
-            "name":"Весь МТС",
-            "tags":["wifi", "tv", "mobile"],
-            "type":"Интернет + ТВ + Мобайл",
-            "short":"Домашний интернет, ТВ и мобильная связь",
-            "services":[
-                {
-                    "name":"Интернет",
-                    "value":"до 200 Мбит/с",
-                    "icon":"wifi_white.png"
-                },
-                {
-                    "name":"Домашнее ЦТВ",
-                    "value":"222 канала",
-                    "icon":"tv_white.png"
-                },
-                {
-                    "name":"Мобильная связь",
-                    "value":"1500 минут, 30 Гб",
-                    "icon":"phone_white.png"
-                }
-            ],
-            "equip":[
-                {
-                    "value":"Аренда роутера – 99 руб./месяц"
-                },
-                {
-                    "value":"Аренда приставки – 99 руб./месяц"
-                },
-                {
-                    "value":"Аренда каммодуля - 99 р./месяц"
-                }
-            ],
-            "extra":[
-                {
-                    "value":"Онлайн кинотеатр KION"
-                },
-                {
-                    "value":"Акция месяц в подарок"
-                },
-                {
-                    "value":"Скидка 10% на автоплатёж"
-                }
-            ],
-            "price":590
-        },
-        {
-            "name":"Весь МТС Интернет",
-            "tags":["wifi", "mobile"],
-            "type":"Интернет + Мобайл",
-            "short":"Домашний интернет с мобильной связью",
-            "services":[
-                {
-                    "name":"Интернет",
-                    "value":"до 200 Мбит/с",
-                    "icon":"wifi_white.png"
-                },
-                {
-                    "name":"Мобильная связь",
-                    "value":"1500 минут, 30 Гб",
-                    "icon":"phone_white.png"
-                }
-            ],
-            "equip":[
-                {
-                    "value":"Аренда роутера – 99 руб./месяц"
-                }
-            ],
-            "extra":[
-                {
-                    "value":"Онлайн кинотеатр KION"
-                },
-                {
-                    "value":"Акция месяц в подарок"
-                },
-                {
-                    "value":"Скидка 10% на автоплатёж"
-                }
-            ],
-            "price":590
-        },
-        {
-            "name":"Весь МТС ТВ",
-            "tags":["tv", "mobile"],
-            "type":"ТВ + Мобайл",
-            "short":"Домашний интернет с мобильной связью",
-            "services":[
-                {
-                    "name":"Домашнее ЦТВ",
-                    "value":"222 канала",
-                    "icon":"tv_white.png"
-                },
-                {
-                    "name":"Мобильная связь",
-                    "value":"1500 минут, 30 Гб",
-                    "icon":"phone_white.png"
-                }
-            ],
-            "equip":[
-                {
-                    "value":"Аренда приставки – 99 руб./месяц"
-                },
-                {
-                    "value":"Аренда каммодуля - 99 р./месяц"
-                }
-            ],
-            "extra":[
-                {
-                    "value":"Онлайн кинотеатр KION"
-                },
-                {
-                    "value":"Акция месяц в подарок"
-                },
-                {
-                    "value":"Скидка 10% на автоплатёж"
-                }
-            ],
-            "price":590
-        },
-        {
-            "name":"Мы МТС+ 100",
-            "tags":["wifi", "tv", "mobile"],
-            "type":"Интернет + ТВ + Мобайл",
-            "short":"Домашний интернет с мобильной связью и ТВ",
-            "services":[
-                {
-                    "name":"Интернет",
-                    "value":"до 100 Мбит/с",
-                    "icon":"wifi_white.png"
-                },
-                {
-                    "name":"Домашнее ЦТВ",
-                    "value":"222 канала",
-                    "icon":"tv_white.png"
-                },
-                {
-                    "name":"Мобильная связь",
-                    "value":"2500 минут, 40 Гб + 40 Гб другу",
-                    "icon":"phone_white.png"
-                }
-            ],
-            "equip":[
-                {
-                    "value":"Аренда роутера – 99 руб./месяц"
-                },
-                {
-                    "value":"Аренда приставки – 99 руб./месяц"
-                },
-                {
-                    "value":"Аренда каммодуля - 99 р./месяц"
-                }
-            ],
-            "extra":[
-                {
-                    "value":"Онлайн кинотеатр KION"
-                },
-                {
-                    "value":"Акция месяц в подарок"
-                },
-                {
-                    "value":"Скидка 10% на автоплатёж"
-                },
-                {
-                    "value":"Матч! Премьер"
-                }
-            ],
-            "price":750
-        },
-        {
-            "name":"Мы МТС+ 500",
-            "tags":["wifi", "tv", "mobile"],
-            "type":"Интернет + ТВ + Мобайл",
-            "short":"Домашний интернет с мобильной связью и ТВ",
-            "services":[
-                {
-                    "name":"Интернет",
-                    "value":"до 500 Мбит/с",
-                    "icon":"wifi_white.png"
-                },
-                {
-                    "name":"Домашнее ЦТВ",
-                    "value":"222 канала",
-                    "icon":"tv_white.png"
-                },
-                {
-                    "name":"Мобильная связь",
-                    "value":"2500 минут, 40 Гб + 40 Гб другу",
-                    "icon":"phone_white.png"
-                }
-            ],
-            "equip":[
-                {
-                    "value":"Аренда роутера – 99 руб./месяц"
-                },
-                {
-                    "value":"Аренда приставки – 99 руб./месяц"
-                },
-                {
-                    "value":"Аренда каммодуля - 99 р./месяц"
-                }
-            ],
-            "extra":[
-                {
-                    "value":"Онлайн кинотеатр KION"
-                },
-                {
-                    "value":"Акция месяц в подарок"
-                },
-                {
-                    "value":"Скидка 10% на автоплатёж"
-                },
-                {
-                    "value":"Матч! Премьер"
-                }
-            ],
-            "price":750
-        }
-    ],
+    "posts_url":"http://192.168.0.103:8080/allactualposts",
+
 
     "maskOptions" : { 
         "mask": "+{7}(900) 000-00-00"
